overlay/develop/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: moodle
  labels:
    app: moodle
    app.kubernetes.io/component: moodle
    app.kubernetes.io/instance: moodle
    app.kubernetes.io/name: moodle
    app.kubernetes.io/part-of: moodle
spec:
  host: ${EXTERNAL_URL}
  to:
    kind: Service
    name: moodle
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
